Should have fixed scrollbars in windows but didn't

--- a/rauha/css/styles.css
+++ b/rauha/css/styles.css
@@ -95,6 +95,11 @@
   }
 }
 
+/* Hide scrollbar for Chrome, Safari and Opera */
+body::-webkit-scrollbar {
+  display: none;
+}
+
 body {
   margin: 0;
   min-height: 100%;
@@ -107,6 +112,11 @@ body {
   background-color: var(--bs-body-bg);
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+
+  /* Hide scrollbar for IE, Edge and Firefox */
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+  overflow-y: scroll;
 }
 
 hr {
